--- a/Example/package.json
+++ b/Example/package.json
@@ -7,15 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^16.3.0-alpha.1",
-    "react-native": "0.55.0",
-    "react-native-chip-view": "../"
+    "react": "16.3.1",
+    "react-native": "0.55.4",
+    "react-native-chip-view": "../",
+    "react-native-vector-icons": "4.6.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.3",
-    "react-test-renderer": "^16.3.0-alpha.1"
+    "react-test-renderer": "16.3.1"
   },
   "jest": {
     "preset": "react-native"
